--- a/src/index.html
+++ b/src/index.html
@@ -12,21 +12,21 @@
     <div id="game" class="h-screen flex flex-col justify-around p-24">
       <h1 class="text-7xl text-center">Guess the Number</h1>
       <h2
-        class="bg-purple-500 w-24 text-center text-7xl self-center text-white p-4"
+        class="text-center text-7xl self-center text-white"
         id="secret-number"
       >
-        ?
+        ??
       </h2>
       <div class="flex justify-between items-center text-5xl">
         <div class="flex flex-col items-center gap-8">
           <input
-            class="w-24 h-24 text-center text-purple-500 focus:outline-none focus:border-none rounded-xl"
+            class="w-24 h-24 text-center text-black focus:outline-none focus:border-none rounded-xl"
             type="number"
             id="user-input"
           />
           <button
             id="btn-check"
-            class="block bg-purple-500 px-10 py-2 rounded-xl hover:text-teal-500 transition-all"
+            class="block bg-white text-black px-10 py-2 rounded-xl hover:bg-gray-300 transition-all"
           >
             CHECK
           </button>
@@ -40,6 +40,52 @@
       <p class="absolute top-2 right-2 text-xl text-green-500">
         Number between 1-21
       </p>
+      <div class="stroke-red-500 absolute flex top-4 left-4" id="user-life">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="3"
+          stroke="stroke-red-500"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="3"
+          stroke="stroke-red-500"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="3"
+          stroke="stroke-red-500"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
+          />
+        </svg>
+      </div>
     </div>
   </body>
 </html>
