--- a/src/index.html
+++ b/src/index.html
@@ -30,62 +30,25 @@
           >
             CHECK
           </button>
+          <button
+            id="btn-again"
+            class="block bg-white text-black px-10 py-2 rounded-xl hover:bg-gray-300 transition-all"
+          >
+            AGAIN
+          </button>
         </div>
         <div class="flex flex-col gap-8">
           <h4 id="hint">Type your Guess</h4>
-          <p>userScore: <span id="user-score">4</span></p>
-          <p>userHigh: <span id="user-high">7</span></p>
+          <p>userScore: <span id="user-score">0</span></p>
+          <p>userHigh: <span id="user-high">0</span></p>
         </div>
       </div>
       <p class="absolute top-2 right-2 text-xl text-green-500">
-        Number between 1-21
+        Number between 1-10
       </p>
-      <div class="stroke-red-500 absolute flex top-4 left-4" id="user-life">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="3"
-          stroke="stroke-red-500"
-          class="w-6 h-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          />
-        </svg>
-
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="3"
-          stroke="stroke-red-500"
-          class="w-6 h-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          />
-        </svg>
-
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="3"
-          stroke="stroke-red-500"
-          class="w-6 h-6"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"
-          />
-        </svg>
-      </div>
+      <p class="absolute top-2 left-2 text-xl">
+        LIFE: <span id="life">3</span>
+      </p>
     </div>
   </body>
 </html>
